--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,26 @@
             <artifactId>commons-codec</artifactId>
             <version>1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>140</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.eaio.uuid</groupId>
+            <artifactId>uuid</artifactId>
+            <version>3.2</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>eaio.com</id>
+            <url>http://eaio.com/maven2</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
