--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'war'
 apply plugin: 'idea'
 
 repositories {
@@ -8,14 +8,23 @@ repositories {
 
 }
 
-mainClassName = "sslify.TestCLI"
+mainClassName = "sslify.CLIMain"
 
 dependencies {
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
-    compile group: 'bouncycastle', name: 'bcprov-jdk16', version: '140'
-    compile group: 'com.eaio.uuid', name: 'uuid', version: '3.2'
-    compile group: 'com.google.guava', name: 'guava', version: '10.0.1'
-    compile group: 'com.google.inject', name: 'guice', version: '3.0'
-    compile group: 'org.projectlombok', name: 'lombok', version: '0.10.4'
-    compile group: 'com.intellij', name: 'annotations', version: '9.0.4'
+    compile 'commons-codec:commons-codec:1.5'
+    compile 'bouncycastle:bcprov-jdk16:140'
+    compile 'com.eaio.uuid:uuid:3.2'
+    compile 'com.google.guava:guava:10.0.1'
+    compile 'com.google.inject:guice:3.0'
+    compile 'org.projectlombok:lombok:0.10.4'
+    compile 'com.intellij:annotations:9.0.4'
+    // compile 'org.mortbay.jetty:jetty-hightide:8.0.4.v20111024'
+    compile 'org.simpleframework:simple:4.1.21'
+}
+
+idea {
+    project {
+        jdkName = '1.6'
+        languageLevel = '1.5'
+    }
 }
