CertInfoFactoryLDAPImpl: create contexts on the fly and use connection pooling

--- a/src/main/resources/ldap.conf.properties
+++ b/src/main/resources/ldap.conf.properties
@@ -3,6 +3,7 @@ java.naming.provider.url=ldap://ldap.example.net
 java.naming.security.authentication=CRAM-MD5
 java.naming.security.principal=foo
 java.naming.security.credentials=bar
+com.sun.jndi.ldap.connect.pool=true
 queries.basedn.user=cn=users,dc=example,dc=net
 queries.basedn.groups=cn=groups,dc=example,dc=net
 queries.filter.user=(uid=%s)
