--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile 'org.projectlombok:lombok:0.10.4'
     compile 'com.intellij:annotations:9.0.4'
     compile 'org.simpleframework:simple:4.1.21'
+    compile 'org.simpleframework:simple:4.1.21'
+    compile 'net.sf.ehcache:ehcache-core:2.5.0'
 }
 
 idea { project { jdkName = '1.6'; languageLevel = '1.6' } }
