Synchronize less, don't check certs unless wanted

--- a/src/main/resources/x509.conf.properties
+++ b/src/main/resources/x509.conf.properties
@@ -2,3 +2,4 @@ ca.cert.path=/etc/ssl/certs/example-net.pem
 ca.key.path=/etc/ssl/private/example-net.pem
 hours.before=1
 hours.after=48
+check=false
