ldap.conf.properties: specify objectClass in filter

--- a/src/main/resources/ldap.conf.properties
+++ b/src/main/resources/ldap.conf.properties
@@ -6,5 +6,5 @@ java.naming.security.credentials=bar
 com.sun.jndi.ldap.connect.pool=true
 queries.basedn.user=cn=users,dc=example,dc=net
 queries.basedn.groups=cn=groups,dc=example,dc=net
-queries.filter.user=(uid=%s)
-queries.filter.groups=(memberUid=%s)
+queries.filter.user=(&(objectClass=posixAccount)(uid=%s))
+queries.filter.groups=(&(objectClass=posixGroup)(memberUid=%s))
