--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
-apply plugin: 'application'
 apply plugin: 'java'
 apply plugin: 'idea'
 
-repositories { mavenCentral(); mavenRepo url: 'http://eaio.com.maven2' }
+// apply plugin: 'application'
+// mainClassName = 'sslify.CLIMain'
 
-mainClassName = 'sslify.CLIMain'
+jar {
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    ['SF', 'DSA', 'RSA'].each { exclude "META-INF/*.$it" }
+}
+
+manifest.mainAttributes('Main-Class' : 'sslify.CLIMain')
+
+repositories { mavenCentral(); mavenRepo url: 'http://eaio.com.maven2' }
 
 dependencies {
     compile 'commons-codec:commons-codec:1.5'
@@ -14,9 +21,13 @@ dependencies {
     compile 'com.google.inject:guice:3.0'
     compile 'org.projectlombok:lombok:0.10.4'
     compile 'com.intellij:annotations:9.0.4'
-    compile 'org.simpleframework:simple:4.1.21'
-    compile 'org.simpleframework:simple:4.1.21'
+    compile 'org.eclipse.jetty:jetty-server:8.1.0.RC1'
+    compile 'org.eclipse.jetty:jetty-servlet:8.1.0.RC1'
     compile 'net.sf.ehcache:ehcache-core:2.5.0'
+    compile 'ch.qos.logback:logback-classic:1.0.0'
+    compile 'org.slf4j:slf4j-api:1.6.4'
 }
 
-idea { project { jdkName = '1.6'; languageLevel = '1.6' } }
+sourceCompatibility = '1.6'
+targetCompatibility = '1.6'
+idea { project { jdkName = '1.7'; languageLevel = '1.6' } }
