--- a/src/main/resources/ldap.conf.properties
+++ b/src/main/resources/ldap.conf.properties
@@ -4,7 +4,9 @@ java.naming.security.authentication=CRAM-MD5
 java.naming.security.principal=foo
 java.naming.security.credentials=bar
 com.sun.jndi.ldap.connect.pool=true
-queries.basedn.user=cn=users,dc=example,dc=net
+queries.basedn.users=cn=users,dc=example,dc=net
 queries.basedn.groups=cn=groups,dc=example,dc=net
-queries.filter.user=(&(objectClass=posixAccount)(uid=%s))
+queries.filter.users=(&(objectClass=posixAccount)(mail=*)(uid=*))
 queries.filter.groups=(&(objectClass=posixGroup)(memberUid=%s))
+queries.key.user=uid
+queries.key.group=cn
