UserInfo: flexible URIs instead of Spotify-specific

--- a/src/main/resources/ldap.conf.properties
+++ b/src/main/resources/ldap.conf.properties
@@ -10,3 +10,4 @@ queries.filter.users=(&(objectClass=posixAccount)(mail=*)(uid=*))
 queries.filter.groups=(&(objectClass=posixGroup)(memberUid=%s))
 queries.key.user=uid
 queries.key.group=cn
+uri.scheme=https://wiki.example.com/wiki/User:%s
